--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,1 +1,185 @@
 @import "base";
+
+.propose {
+	position: relative;
+	overflow: hidden;
+	margin-bottom: 59px;
+	padding-bottom: 10px;
+	&:after {
+		content: "";
+		position: absolute;
+		bottom: 10px;
+		left: 0;
+		width: 100%;
+		height: 10px;
+		@include box-shadow(0 0 6px 6px #9baebe);
+		@include border-radius(50%);
+	}
+	.wrapper {
+		@include border-radius(3px);
+	}
+	.title-l-3 {
+		position: relative;
+		margin-bottom: 15px;
+		i {
+			position: absolute;
+			left: -35px;
+			top: -7px;
+		}
+		.icon-1 {@include sized-sprite($icons, i1);}
+		.icon-2 {@include sized-sprite($icons, i2);}
+		.icon-3 {@include sized-sprite($icons, i3);}
+		.icon-4 {@include sized-sprite($icons, i4);}
+		.icon-5 {@include sized-sprite($icons, i5);}
+		.icon-6 {@include sized-sprite($icons, i6);}
+	}
+}
+.propose__wrap {
+	position: relative;
+	z-index: 2;
+	margin-right: -145px;
+	padding: 29px 0 0 65px;
+	background-color: #ffaa06;
+	@include background-image(linear-gradient(#ffd509, #ff9d05));
+}
+.propose__col {
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 91px 34px 0;
+	width: 260px;
+	&:nth-child(2),
+	&:nth-child(3) {
+		.title-l-3 {
+			margin-bottom: 36px;
+		}
+	}
+	a {
+		color: #000;
+	}
+	li {
+		margin-bottom: 3px;
+	}
+}  
+
+.best-sellers {
+	margin-bottom: 28px;
+	padding-bottom: 35px;
+	border-top: 3px solid #96a5b2;
+	border-bottom: 3px solid #96a5b2;
+	.title-l-2 {
+		position: relative;
+		top: -31px;
+		display: inline-block;
+		padding-right: 13px;
+		background: #fff;
+		i {
+			display: inline-block;
+			vertical-align: middle;
+			margin-right: 5px;
+			@include sized-sprite($icons, best);
+		}
+	}
+}
+.scroll {
+	position: relative;
+	button {
+		position: absolute;
+		top: 65px;
+	}
+	.is-disabled {
+		display: none;
+	}
+}
+.scroll__wrap {
+	position: relative;
+	overflow: hidden;
+	margin: 0 auto;
+	height: 240px;
+	width: 942px;
+}
+.scroll__items {
+	position: absolute;
+	top: 0;
+	width: 2000em;
+}
+.scroll__slide {
+	float: left;
+	padding: 0 10px;
+	width: 215px;
+	height: 237px;
+	text-align: center;
+	border-right: 1px dotted #4c5257;
+	div {
+		height: 190px;
+	}
+}
+.scroll__prev {
+	left: 0;
+	@include sized-sprite($icons, prev2);
+}
+.scroll__next {
+	right: 0;
+	@include sized-sprite($icons, next2);
+}
+
+.wrapper_index {
+	margin-bottom: 58px;
+}
+.about {
+	float: left;
+	padding-left: 33px;
+	width: 585px;
+	bottom: 58px;
+	.title-l-2 {
+		position: relative;
+		i {
+			position: absolute;
+			left: -33px;
+			top: -7px;
+			@include sized-sprite($icons, case2);
+		}
+	}
+}
+
+.article-list {
+	float: right;
+	width: 300px;
+	.title-l-2 {
+		position: relative;
+		i {
+			position: absolute;
+			left: -33px;
+			top: -7px;
+			@include sized-sprite($icons, article);
+		}
+	}
+	ul {
+		margin-bottom: 7px;
+		border-bottom: 1px solid #a3a3a3;
+		span {
+			display: block;
+			margin-bottom: 2px;
+			font-size: 12px;
+			color: #727c86;
+		}
+		i {
+			display: inline-block;
+			margin-right: 5px;
+			@include sized-sprite($icons, clock);
+		}
+		a {
+			color: #0a90ce;
+		}
+	}
+	li {
+		margin-bottom: 17px;
+	}
+}
+.link-all {
+	color: #525961;
+	i {
+		display: inline-block;
+		margin-right: 5px;
+		@include sized-sprite($icons, all);
+	}
+}
