--- a/sass/common.scss
+++ b/sass/common.scss
@@ -97,7 +97,7 @@ a{
 .header {
     position: relative;
     z-index: 2;
-    padding-top: 21px;
+    padding-top: 28px;
 }
 .header__logo {
     float: left;
@@ -110,14 +110,14 @@ a{
 }
 .header__slogan {
     float: left;
-    margin-top: 11px;
+    margin-top: 13px;
     color: #848fa9;
     font: bold 16px Tahoma,sans-serif;
     text-transform: uppercase;
 }
 .header__cont {
     float: right;
-    margin-bottom: 36px;
+    margin: -7px 0 36px;
     strong {
         display: block;
         margin-bottom: 7px;
@@ -221,7 +221,10 @@ a{
 /* ------------------------------------- Independent blocks -------------------------------------- */
 .slider {
     position: relative;
-    margin-bottom: 28px;
+    margin-bottom: 37px;
+}
+.slider_inner {
+    margin-bottom: 22px;
 }
 .slider__wrap {
     position: relative;
@@ -231,6 +234,7 @@ a{
     position: absolute;
     height: 281px;
     overflow: hidden;
+    text-decoration: none;
     img {
         display: block;
     }
@@ -244,12 +248,12 @@ a{
     @include b;
     span {
         display: block;
-        padding: 2px 17px 2px 10px;
+        padding: 0px 17px 5px 10px;
         background: #000;
         background: rgba(0,0,0,.73);
         &:first-child {
             display: inline-block;
-            padding: 3px 17px 0 10px;
+            padding: 3px 17px 0px 10px;
         }
     }
     strong {
@@ -264,7 +268,7 @@ a{
     z-index: 100;
     width: 32px;
     height: 281px;
-    line-height: 281px;
+    line-height: 297px;
     text-align: center;
     background: #000;
     background: rgba(0,0,0,.57);
@@ -290,7 +294,7 @@ a{
 }
 .slider__pagin {
     position: absolute;
-    bottom: 10px;
+    bottom: 7px;
     left: 0;
     right: 0;
     z-index: 100;
@@ -329,8 +333,8 @@ a{
 }
 .footer__nav {
     float: left;
-    margin-left: 15px;
-    padding-top: 5px;
+    margin-left: 17px;
+    padding-top: 7px;
     @extend %clr;
     li {
         float: left;
